--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -17,8 +17,8 @@
 }
 
 .page {
-  @include breakpoint($large) {
-    @include span(11 of 12 last);
+  @include breakpoint($x-large) {
+    @include span(11 of 12);
     @include prefix(1 of 12);
     @include suffix(1 of 12);
   }
