--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -33,12 +33,12 @@
     list-style: none;
     font-size: $type-size-6;
 
-    @include breakpoint($large) {
-      @include span(10 of 12 last);
+    @include breakpoint($x-large) {
+      @include span(12 of 12 last);
     }
 
     @include breakpoint($x-large) {
-      @include prefix(0.5 of 12);
+      @include prefix(1 of 12);
     }
   }
 
