--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -19,8 +19,8 @@
 .page {
   @include breakpoint($x-large) {
     @include span(12 of 12);
-    @include prefix(1 of 12);
-    @include suffix(1 of 12);
+    /* @include prefix(1 of 12);
+    @include suffix(1 of 12); */
   }
 
   .page__inner-wrap {
